[tool.poetry]
name = "major-project"
version = "0.1.0"
description = ""
authors = ["Gautam Singla <ggsingla777@gmail.com>"]
readme = "README.md"
packages = [{include = "major_project"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
stable-baselines3 = "^2.2.1"
shimmy = "^1.3.0"
gymnasium = "^0.29.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
